--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="container">
     <div class="row">
       <div class="col-4" style="text-align: right;">
-        <a href="./index.html"><img src="./images/logo.PNG" alt="Celra Logo" class="celra"></a>
+        <a href="./index.html"><img src="./images/logo.png" alt="Celra Logo" class="celra"></a>
       </div>
       <div class="col-8">
         <div class="text">
