--- a/index/team-section.html
+++ b/index/team-section.html
@@ -210,7 +210,7 @@
           <div class="last-row col-md-4">
             <div class="team-member">
               <figure>
-                <img src="../images/subin.jpg" alt="" class="img-responsive" style="object-fit: scale-down;">
+                <img src="../images/Subin.jpg" alt="" class="img-responsive" style="object-fit: scale-down;">
                 <figcaption>
                   <p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo eligendi.</p>
                   <ul>
