--- a/index/team-section.html
+++ b/index/team-section.html
@@ -202,7 +202,7 @@
                   </ul>
                 </figcaption>
               </figure>
-              <h4 class="heading">Vidya Ann Jacob</h4>
+              <h4 class="heading">Ms. Vidya Ann Jacob</h4>
               <p>Web Developer</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
