--- a/index.html
+++ b/index.html
@@ -4,23 +4,6 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--********************icons****************************-->
-  
-  <meta name="keywords" content="yuva YUVA law Nitimanthan Niti Manthan">
-  <meta name="application-name" content="NITI MANTHAN"/>
-  <meta name="author" content="Yash Kulshreshtha">
-  <meta property="og:url" content="https://nitimanthan.in/" />
-  <meta property="article:author" content="Yash Kulshreshtha" />
-  
-  <meta property="og:title" content="Niti Manthan" />
-  <meta property="og:site_name" content="Niti Manthan" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://nitimanthan.in/" />
-  <meta name="description" content="Facilitating young minds towards holistic development." />
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="310">
-  <meta property="og:image:height" content="310">
-  <!--Created and designed by Yash Kulshreshtha visit: https://linkedin.com/in/yksmbkkr -->
   <!-- Google Tag Manager -->
   
   <!-- End Google Tag Manager -->
@@ -164,13 +147,13 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!--1-->
             <li class="nav-item dropdown">
-              <a class="nav-link btn btn-outline-secondary" href="./index/team-section.html" type="button" aria-current="page">
+              <a class="nav-link btn btn-outline-secondary btn-sm" href="./index/team-section.html" type="button" aria-current="page">
                 About Us
               </a>
             </li>
             <!--2-->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle btn btn-outline-secondary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle btn btn-outline-secondary btn-sm" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Events
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -182,15 +165,15 @@
             
             <!--3-->
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-secondary" aria-current="page" href="./index.html#Blog-Media" type="button">Blog & Media</a>
+              <a class="nav-link btn btn-outline-secondary btn-sm" aria-current="page" href="./index.html#Blog-Media" type="button">Blog & Media</a>
             </li>
             <!--4-->
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-secondary" aria-current="page" href="./index.html#News" type="button">News</a>
+              <a class="nav-link btn btn-outline-secondary btn-sm" aria-current="page" href="./index.html#News" type="button">News</a>
             </li>
             <!--5-->
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-secondary" aria-current="page" href="https://nitimanthan.in/" type="button">Opportunities</a>
+              <a class="nav-link btn btn-outline-secondary btn-sm" aria-current="page" href="https://nitimanthan.in/" type="button">Opportunities</a>
             </li>
           </ul>
           <!-- <div class="col-rt-3 equal-height"> -->
@@ -424,8 +407,7 @@
                     <ul>
                       <li><a href="#">Home</a></li>
                       <li><a href="#">Terms</a></li>
-                      <li><a href="#">Privacy</a></li>
-                      <li><a href="#">Policy</a></li>
+                      <li><a href="#">Privacy Policy</a></li>
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
