--- a/index/team-section.html
+++ b/index/team-section.html
@@ -32,7 +32,12 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" 
+            style="top: 35%;
+            text-align: center;">
+            <a href="#About-Us"><h2 class="about-us"><b>About Us</b></h2></a>
+          </div>
+            <div class="carousel-item auto-scroll">
               <h5><b>Vision</b></h5><br>
               <p class="vision">Through proactive visualisation and actualisation of policy reform and by working in tandem with and against existing environmental policies. Niti Manthan CELRA strives to promote the unity of national and regional policy making.</p>
             </div>
@@ -45,11 +50,7 @@
                 <li><p>To expand the scope of inclusivity in environmental policy making and include student opinion.</p></li>
               </ul>
             </div>
-            <div class="carousel-item auto-scroll" 
-            style="top: 35%;
-            text-align: center;">
-            <a href="#About-Us"><h2 class="about-us"><b>About Us</b></h2></a>
-          </div>
+            
         </div>
         <br>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
