--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!--1-->
             <li class="nav-item dropdown">
-              <a class="nav-link btn btn-outline-secondary" href="./index/team-section.html" type="button" aria-current="page">
+              <a class="nav-link btn btn-outline-secondary btn-sm" href="./index/team-section.html" type="button" aria-current="page">
                 About Us
               </a>
             </li>
             <!--2-->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle btn btn-outline-secondary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle btn btn-outline-secondary btn-sm" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Events
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -165,15 +165,15 @@
             
             <!--3-->
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-secondary" aria-current="page" href="./index.html#Blog-Media" type="button">Blog & Media</a>
+              <a class="nav-link btn btn-outline-secondary btn-sm" aria-current="page" href="./index.html#Blog-Media" type="button">Blog & Media</a>
             </li>
             <!--4-->
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-secondary" aria-current="page" href="./index.html#News" type="button">News</a>
+              <a class="nav-link btn btn-outline-secondary btn-sm" aria-current="page" href="./index.html#News" type="button">News</a>
             </li>
             <!--5-->
             <li class="nav-item">
-              <a class="nav-link btn btn-outline-secondary" aria-current="page" href="https://nitimanthan.in/" type="button">Opportunities</a>
+              <a class="nav-link btn btn-outline-secondary btn-sm" aria-current="page" href="https://nitimanthan.in/" type="button">Opportunities</a>
             </li>
           </ul>
           <!-- <div class="col-rt-3 equal-height"> -->
